--- a/supervised_word_embeddings.ipynb
+++ b/supervised_word_embeddings.ipynb
@@ -716,6 +716,27 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QTehZDBXiVis"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Simple Preprocessing & Tokenization\n",
+        "The first thing to do for any data science task is to clean the data. For NLP, we apply various processing like converting all the words to lower case, trimming spaces, removing punctuations. This is something we will do over here too.\n",
+        "\n",
+        "Additionally, we can also remove stop words like 'and', 'or', 'is', 'the', 'a', 'an' and convert words to their root forms like 'running' to 'run'."
+      ],
+      "metadata": {
+        "id": "FlI_r6w_iZRE"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "review_text = df.reviewText.apply(gensim.utils.simple_preprocess)\n",
         "review_text"
@@ -1127,6 +1148,36 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YqRaqfibi3Xn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Training the Word2Vec Model\n",
+        "Train the model for reviews. Use a window of size 10 i.e. 10 words before the present word and 10 words ahead. A sentence with at least 2 words should only be considered, configure this using min_count parameter.\n",
+        "\n",
+        "Workers define how many CPU threads to be used."
+      ],
+      "metadata": {
+        "id": "Fy2t5xWWi08W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Initialize the model"
+      ],
+      "metadata": {
+        "id": "sJitm3eli5s2"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "model = gensim.models.Word2Vec(\n",
         "    window=10,\n",
@@ -1141,6 +1192,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Build the model"
+      ],
+      "metadata": {
+        "id": "HNNXwWzujBir"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.build_vocab(review_text, progress_per=1000)"
@@ -1150,6 +1210,15 @@
       },
       "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Train the model"
+      ],
+      "metadata": {
+        "id": "8OsVIjOljENg"
+      }
     },
     {
       "cell_type": "code",
@@ -1178,6 +1247,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "SAVE THE MODEL FOR FUTURE USE"
+      ],
+      "metadata": {
+        "id": "Gk-HRUarjII1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.save(\"./word2vec-amazon-cell-accessories-reviews-short.model\")"
@@ -1187,6 +1265,15 @@
       },
       "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FINDING THE SIMILAR WORDS"
+      ],
+      "metadata": {
+        "id": "Jbr-u8OmjPl2"
+      }
     },
     {
       "cell_type": "code",
